<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="E_LineMachineMode" Id="{0e1f1638-792e-4434-8a96-8f26bacc2384}">
    <Declaration><![CDATA[{attribute 'strict'}
{attribute 'qualified_only'}
TYPE E_LineMachineMode :
(
	eUndefined				:= 0,
	eManual					:= 1,
	eMaintenance			:= 2,
	eAutomatic				:= 3,
	eSemiAutomatic			:= 4,
	eFirstFilling			:= 5,
	eEmptying				:= 6
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>