<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_MCPowerIO" Id="{e4a69ddf-609c-434d-b90f-f11f6aa8257c}">
    <Declaration><![CDATA[//==================================================================================================
//							Beckhoff Automation Poland
//									18.04.2018
//	Struktura zawierajaca I/O odpowiedniego bloku
//  v1.0	|| TC v 3.1.4022.16		|| - pierwsza wersja
//==================================================================================================
TYPE ST_MCPowerIO:
STRUCT
	bEnable							: BOOL;
	bEnable_Positive				: BOOL;
	bEnable_Negative				: BOOL;
	lrOverride						: LREAL := 100.0;
	eBufferMode						: Tc2_MC2.MC_BufferMode;
	stOptions						: Tc2_MC2.ST_PowerOptions;
	bStatus							: bool; // Same meaning as Done
	bBusy							: BOOL;
	bActive							: BOOL;
	bError							: BOOL;
	udiErrorID						: UDINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>